<resources>
    <string name="app_name">LaunguageApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="skip_onboarding">Skip onboarding</string>
    <string name="confidence_in_your_words">Confidence in your words</string>
    <string name="onboarding1_description">With conversation-based learning, you\'ll be talking from lesson one</string>
    <string name="onboarding_2">Take your time to learn</string>
    <string name="onboarding2_des">Develop a habit of learning and make it a part of your daily routine</string>
    <string name="onboarding_3_title">The lessons you need to learn</string>
    <string name="onboarding_3_des">Using a variety of learning styles to learn and retain</string>
    <string name="more">More</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="login">Login</string>
    <string name="login_title">For free, join now and start learning</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_you_member">Not you member?</string>
    <string name="signup">Signup</string>
    <string name="create_an_account">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_you_member">Already you member?</string>
    <string name="continue_text">Continue</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="foefor_pass_access">.  I have made myself acquainted with the Rules_and accept all its provisions,</string>
    <string name="language_select">Language select</string>
    <string name="title_language_selector">What is your Mother language?</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="chinese">Chinese</string>
    <string name="belarus">Belarus</string>
    <string name="kazakh">Kazakh</string>
    <string name="choose">Choose</string>
    <string name="hello_emil">Hello, Amir</string>
    <string name="main_description">Are you ready for learning today?</string>
    <string name="top_users">Top users</string>
    <string name="user_example">Dmitri Ivanovich Mendeleev</string>
    <string name="logout">Logout</string>
    <string name="switch_to_dark">Switch to Dark</string>
    <string name="change_mother_language">Change mother language</string>
    <string name="change_your_image">Change your image</string>
    <string name="your_photo_is_gorgeous">Your photo is gorgeous!</string>
    <string name="just_resize_that_photo_for_fit_in_square">Just resize that photo \nfor fit in square</string>
    <string name="use_that_image">Use that image</string>
    <string name="photot_review">Photot review</string>
    <string name="available_excersises">Available excersises</string>
    <string name="guess_the_animal">Guess the animal</string>
    <string name="word_practice">Word practice</string>
    <string name="game">Game</string>
    <string name="audition">Audition</string>
    <string name="check">Check</string>
    <string name="holy_molly_that_is_right">Holy Molly! That is Right!</string>
    <string name="try_again">Try again</string>
    <string name="write_who_is_on_image">Write who is on image</string>
    <string name="listening">Listening</string>
    <string name="recognizing">Recognizing...</string>

    <string name="please_press_button_and_say_this_word_our_service_will_check_your_pronunciation">Please press button and say this word. Our service will check your pronunciation</string>
    <string name="check_my_speech">Check my speech</string>
    <string name="your_result">Your result</string>
    <string name="some_error_text">Some error text</string>
</resources>