<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".presentation.onboarding.OnboardingMainFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:src="@drawable/onboarding2_img"
        app:layout_constraintBottom_toTopOf="@id/statusBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/statusBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:src="@drawable/status_onboard1"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/materialButton"
        tools:layout_editor_absoluteX="64dp">

        <TextView
            style="@style/h5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_2" />

        <TextView
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/onboarding2_des" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:outlineProvider="none"
        android:text="@string/next"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/skipBt"
        tools:layout_editor_absoluteX="24dp" />

    <TextView
        android:id="@+id/skipBt"
        style="@style/body_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/skip_onboarding"
        android:textColor="@color/text_color"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>