<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.main.profile.ProfileFragment">

    <LinearLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deep_blue"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="134dp"
            android:layout_height="134dp"
            app:cardCornerRadius="200dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            style="@style/h5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"
            android:text="Your profile, Amir"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/switchModeBt"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/switch_to_dark"
        app:layout_constraintBottom_toTopOf="@id/changeLanguageBt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeLanguageBt"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/change_mother_language"
        app:layout_constraintBottom_toTopOf="@id/changeImageBt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/changeImageBt"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/change_your_image"
        app:layout_constraintBottom_toTopOf="@id/logoutBt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutBt"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="26dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>