<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.login.LoginFragment">

    <LinearLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deep_blue"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        android:paddingTop="16dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/backBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back" />
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/signup"
            android:textColor="@color/white" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:visibility="invisible"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/titleContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="56dp"
        app:layout_constraintTop_toBottomOf="@id/toolbarContainer"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            style="@style/h5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/titleContainer">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/dark_lighter" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_back"
                    android:hint="@string/first_name"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="18dp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/dark_lighter" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_back"
                    android:hint="@string/last_name"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="18dp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <TextView
                style="@style/body_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textColor="@color/dark_lighter" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:boxStrokeWidth="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_back"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="18dp" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBt"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/continue_text"
        app:layout_constraintTop_toBottomOf="@+id/editsContainer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/loginBt">

        <TextView
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:text="@string/already_you_member" />

        <TextView
            style="@style/body_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredoka_medium"
            android:text="@string/login"
            android:textColor="@color/blue" />
    </LinearLayout>

    <com.rajat.pdfviewer.PdfRendererView
        android:id="@+id/pdfChecker"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</androidx.constraintlayout.widget.ConstraintLayout>