<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1815"
    tools:context=".presentation.main.profile.resizePhoto.ResizePhotoFragment">

    <LinearLayout
        android:id="@+id/toolbarContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deep_blue"
        android:orientation="vertical"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/h5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_photo_is_gorgeous"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/resizeInstructionText"
        style="@style/h5_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="24dp"
        android:text="@string/just_resize_that_photo_for_fit_in_square"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarContainer" />

    <com.canhub.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="91dp"
        android:layout_marginBottom="209dp"
        android:scaleType="fitCenter"
        app:cropAspectRatioX="1"
        app:cropAspectRatioY="1"
        app:cropCornerRadius="100dp"
        app:cropFixAspectRatio="true"
        app:cropShape="oval"
        app:layout_constraintBottom_toTopOf="@id/useImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resizeInstructionText" />


    <Button
        android:id="@+id/useImageButton"
        style="@style/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="28dp"
        android:text="@string/use_that_image"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
